hphp/hack/test/typecheck/imports_toplevel_strict.php.exp
File "imports_toplevel_strict.php", line 2, characters 1-45:
Toplevel statements are not allowed. Use __EntryPoint attribute instead (Parsing[1002])
