hphp/hack/test/typecheck/imports_toplevel_strict.php
<?hh
require_once(dirname(__FILE__) . '/foo.php');
include_once dirname(__FILE__) . '/foo.php';
require('bar.php');
include('baz.php');
